--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -1,6 +1,6 @@
 .country-card {
   width: 100%;
-  background-color: white;
+  background-color: var(--white);
   border-radius: 7.5px;
   margin-bottom: 35px;
 }
@@ -18,7 +18,7 @@
 .country-info {
   padding: 17.5px 25px 35px;
   border-radius: 0 0 7.5px 7.5px;
-  box-shadow: 0px 10px 15px 2.5px rgb(240, 240, 240);
+  box-shadow: 0px 10px 15px var(--light-shadow);
 }
 
 .country-name {
@@ -38,11 +38,11 @@
   font-weight: 600;
 }
 
-.dark .country-card {
+:global(.dark) .country-card {
   background-color: var(--dark-blue);
 }
 
-.dark .country-info {
+:global(.dark) .country-info {
   color: var(--white);
-  box-shadow: 0px 10px 15px 2.5px hsl(207, 24%, 16%);
+  box-shadow: 0px 10px 15px 2.5px var(--dark-shadow);
 }
